--- a/README
+++ b/README
@@ -317,7 +317,7 @@ You need GNU toolchain and newlib for 'arm-none-eabi' target.
 
 See http://github.com/esden/summon-arm-toolchain/ (which includes fix
 of binutils-2.21.1) for preparation of GNU Toolchain for
-'arm-none-eabi' target.
+'arm-none-eabi' target.  This is for GCC 4.5.
 
 # Note that we need to link correct C library (for string functions).
 # For this purpose, Makefile.in contains following line:
@@ -332,6 +332,13 @@ of binutils-2.21.1) for preparation of GNU Toolchain for
 # In ChibiOS_2.0.8/os/ports/GCC/ARM/rules.mk, it specifies
 # -mno-thumb-interwork option.  This means that you should not
 # link C library which contains ARM (not Thumb) code.
+
+Recently, there is "gcc-arm-embedded" project.  See:
+
+    https://launchpad.net/gcc-arm-embedded/
+
+It is based on GCC 4.6.   For version 4.6-2012-q2-update, you'd
+need "-O3 -s" instead of "-O2".
 
 
 Change directory to `src':
