update README for gcc-arm-embedded toolchain

--- a/README
+++ b/README
@@ -338,7 +338,7 @@ Recently, there is "gcc-arm-embedded" project.  See:
     https://launchpad.net/gcc-arm-embedded/
 
 It is based on GCC 4.6.   For version 4.6-2012-q2-update, you'd
-need "-O3 -s" instead of "-O2".
+need "-O3 -s" instead of "-O2" and it will be slightly better.
 
 
 Change directory to `src':
