add an entry in NEWS

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 Gnuk NEWS - User visible changes
 
+* Major changes in Gnuk 1.0
+
+  Released 2012-07-21, by NIIBE Yutaka
+
+This is bug fixes only release.
+
+
 * Major changes in Gnuk 0.21
 
   Released 2012-07-06, by NIIBE Yutaka
