--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-12-19  Niibe Yutaka  <gniibe@fsij.org>
 
+	* test/gnuk.py: Remove.
+
 	* test/features/steps.py: Use tool/gnuk_token.py.
 
 	* tool/gnuk_put_binary_libusb.py: Use gnuk_token.py.
