--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2012-12-19  Niibe Yutaka  <gniibe@fsij.org>
 
+	* test/factory_upgrade.py: New.
+
+	* src/Makefile.in (USE_OPT): -O3 and -Os (was: -O2).
+
 	* tool/gnuk_token.py (gnuk_token.stop_gnuk, gnuk_token.mem_info)
 	(gnuk_token.download, gnuk_token.execute)
 	(gnuk_token.cmd_get_challenge)
