--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-01-20  Niibe Yutaka  <gniibe@fsij.org>
+
+	* tool/gpg_agent.py: New.
+
 2013-01-11  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/pinpadtest.py: Add fixed length input.
