--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-02-21  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/call-ec_p256.c (ecdsa_sign): Fix secret key access.
+
 2013-02-20  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/openpgp.c (cmd_internal_authenticate): Support ECDSA for
