add header for EC Point

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-02-22  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp.c (ECDSA_SIGNATURE_LENGTH): It's 65.
+
+	* src/call-ec_p256.c (ecdsa_sign): Add a header byte.
+
 2013-02-21  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/gnuk.ld.in (MEMORY): Fix adding FLASH_SIZE unit.
