--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-03-14  Niibe Yutaka  <gniibe@fsij.org>
+
+	* tool/stlinkv2.py (stlinkv2.start): Call write_debug_reg to run
+	the core again.
+
 2013-03-12  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/gnuk.ld.in (__process_stack_size__): Increase (was: 0x200).
