--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Gnuk - An Implementation of USB Cryptographic Token for GnuPG
 
-							  Version 1.0.2
-							     2013-02-15
+							  Version 1.0.3
+							     2013-03-14
 							   Niibe Yutaka
 				      Free Software Initiative of Japan
 
@@ -108,14 +108,19 @@ Ab: That's because gnome-keyring-daemon interferes GnuPG.  Type:
     "GPG Password Agent" and "SSH Key Agent".
 
 Qc: Do you know a good SWD debugger to connect FST-01 or something?
-Ac: ST-Link/V2 is cheap one.  We have a tool/stlinkv2.py as flash ROM
-    writer program.
+
+Ac: ST-Link/V2 is cheap one and works, although it's not very good
+    (for example, we have not yet been able to use OpenOCD to write
+    option bytes of STM32F103).  We have a tool/stlinkv2.py as a flash
+    ROM writer program.  Note that some "Discovery Kit" from ST has
+    the feature of ST-Link/V2, but it is not as stable as the real
+    one.
 
 
 Release notes
 =============
 
-This is a second minor release in version 1.0 series of Gnuk.
+This is a third minor release in version 1.0 series of Gnuk.
 
 While it is daily use for a year and a half, some newly introduced
 features (including key generation and firmware upgrade) should be
@@ -174,7 +179,7 @@ disable read from flash.  For real use, please consider killing DfuSe
 and enabling read protection using JTAG debugger.
 
 I think that it could run on Olimex STM32-P103, or other boards with
-STM32F103.  Besides, we are porting it to STM32 Primer 2.
+STM32F103.  Besides, we did an experiment with STM32 Primer 2.
 
 For PIN-pad support, I connect a consumer IR receive module to STBee
 Mini and STM8S Discovery Kit, and use controller for TV.  PIN
@@ -338,8 +343,7 @@ Recently, there is "gcc-arm-embedded" project.  See:
 
     https://launchpad.net/gcc-arm-embedded/
 
-It is based on GCC 4.6.   For version 4.6-2012-q2-update, you'd
-need "-O3 -Os" instead of "-O2" and it will be slightly better.
+It is based on GCC 4.6 or 4.7.
 
 
 Change directory to `src':
@@ -657,7 +661,8 @@ linux/Documentation/usb/usbmon.txt
 Firmware update
 ===============
 
-See doc/note/firmware-update.
+See doc/note/firmware-update.  Note that this is an experimental
+feature.
 
 
 Git Repositories
